HeroLang/grammar/GrammarParser.py
# Generated from Grammar.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class GrammarParser ( Parser ):

    grammarFileName = "Grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'<'", "'>'", "'('", "')'", "'['", "']'", 
                     "<INVALID>", "'if'", "'while'", "'NO'", "'WALL'", "'ENEMY'", 
                     "'TREASURE'", "'TRAP'", "'AND'", "'OR'", "'forward'", 
                     "'turn'", "'attack'", "'disarm'", "'left'", "'right'", 
                     "'fun'", "'TRUE'", "'FALSE'", "'FOR'", "'PRINT'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "COMMENT", 
                      "IF", "WHILE", "NEGATION", "WALL", "ENEMY", "TREASURE", 
                      "TRAP", "AND", "OR", "FORWARD", "TURN", "ATTACK", 
                      "DISARM", "LEFT", "RIGHT", "FUN", "TRUE", "FALSE", 
                      "FOR", "PRINT", "NAME", "NUMBER", "SOME_STRING", "WHITESPACE", 
                      "NEWLINE" ]

    RULE_statements = 0
    RULE_statement = 1
    RULE_function_call = 2
    RULE_if_statement = 3
    RULE_while_statement = 4
    RULE_for_statement = 5
    RULE_print_statement = 6
    RULE_bracket_cond = 7
    RULE_cond_help = 8
    RULE_condition = 9
    RULE_action = 10
    RULE_direction = 11
    RULE_function = 12

    ruleNames =  [ "statements", "statement", "function_call", "if_statement", 
                   "while_statement", "for_statement", "print_statement", 
                   "bracket_cond", "cond_help", "condition", "action", "direction", 
                   "function" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    COMMENT=7
    IF=8
    WHILE=9
    NEGATION=10
    WALL=11
    ENEMY=12
    TREASURE=13
    TRAP=14
    AND=15
    OR=16
    FORWARD=17
    TURN=18
    ATTACK=19
    DISARM=20
    LEFT=21
    RIGHT=22
    FUN=23
    TRUE=24
    FALSE=25
    FOR=26
    PRINT=27
    NAME=28
    NUMBER=29
    SOME_STRING=30
    WHITESPACE=31
    NEWLINE=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.StatementContext)
            else:
                return self.getTypedRuleContext(GrammarParser.StatementContext,i)


        def getRuleIndex(self):
            return GrammarParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)




    def statements(self):

        localctx = GrammarParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 26
                self.statement()
                self.state = 29 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GrammarParser.IF) | (1 << GrammarParser.WHILE) | (1 << GrammarParser.FORWARD) | (1 << GrammarParser.TURN) | (1 << GrammarParser.ATTACK) | (1 << GrammarParser.DISARM) | (1 << GrammarParser.FUN) | (1 << GrammarParser.FOR) | (1 << GrammarParser.PRINT) | (1 << GrammarParser.NAME))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_statement(self):
            return self.getTypedRuleContext(GrammarParser.If_statementContext,0)


        def while_statement(self):
            return self.getTypedRuleContext(GrammarParser.While_statementContext,0)


        def action(self):
            return self.getTypedRuleContext(GrammarParser.ActionContext,0)


        def function(self):
            return self.getTypedRuleContext(GrammarParser.FunctionContext,0)


        def function_call(self):
            return self.getTypedRuleContext(GrammarParser.Function_callContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(GrammarParser.For_statementContext,0)


        def print_statement(self):
            return self.getTypedRuleContext(GrammarParser.Print_statementContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = GrammarParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 38
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GrammarParser.IF]:
                self.enterOuterAlt(localctx, 1)
                self.state = 31
                self.if_statement()
                pass
            elif token in [GrammarParser.WHILE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 32
                self.while_statement()
                pass
            elif token in [GrammarParser.FORWARD, GrammarParser.TURN, GrammarParser.ATTACK, GrammarParser.DISARM]:
                self.enterOuterAlt(localctx, 3)
                self.state = 33
                self.action()
                pass
            elif token in [GrammarParser.FUN]:
                self.enterOuterAlt(localctx, 4)
                self.state = 34
                self.function()
                pass
            elif token in [GrammarParser.NAME]:
                self.enterOuterAlt(localctx, 5)
                self.state = 35
                self.function_call()
                pass
            elif token in [GrammarParser.FOR]:
                self.enterOuterAlt(localctx, 6)
                self.state = 36
                self.for_statement()
                pass
            elif token in [GrammarParser.PRINT]:
                self.enterOuterAlt(localctx, 7)
                self.state = 37
                self.print_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_callContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(GrammarParser.NAME, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_function_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_call" ):
                listener.enterFunction_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_call" ):
                listener.exitFunction_call(self)




    def function_call(self):

        localctx = GrammarParser.Function_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(GrammarParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class If_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(GrammarParser.IF, 0)

        def bracket_cond(self):
            return self.getTypedRuleContext(GrammarParser.Bracket_condContext,0)


        def statements(self):
            return self.getTypedRuleContext(GrammarParser.StatementsContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_if_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_statement" ):
                listener.enterIf_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_statement" ):
                listener.exitIf_statement(self)




    def if_statement(self):

        localctx = GrammarParser.If_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_if_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(GrammarParser.IF)
            self.state = 43
            self.match(GrammarParser.T__0)
            self.state = 44
            self.bracket_cond(0)
            self.state = 45
            self.match(GrammarParser.T__1)
            self.state = 46
            self.match(GrammarParser.T__2)
            self.state = 47
            self.statements()
            self.state = 48
            self.match(GrammarParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class While_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(GrammarParser.WHILE, 0)

        def bracket_cond(self):
            return self.getTypedRuleContext(GrammarParser.Bracket_condContext,0)


        def statements(self):
            return self.getTypedRuleContext(GrammarParser.StatementsContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_while_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_statement" ):
                listener.enterWhile_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_statement" ):
                listener.exitWhile_statement(self)




    def while_statement(self):

        localctx = GrammarParser.While_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_while_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(GrammarParser.WHILE)
            self.state = 51
            self.match(GrammarParser.T__0)
            self.state = 52
            self.bracket_cond(0)
            self.state = 53
            self.match(GrammarParser.T__1)
            self.state = 54
            self.match(GrammarParser.T__2)
            self.state = 55
            self.statements()
            self.state = 56
            self.match(GrammarParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class For_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(GrammarParser.FOR, 0)

        def NUMBER(self):
            return self.getToken(GrammarParser.NUMBER, 0)

        def statements(self):
            return self.getTypedRuleContext(GrammarParser.StatementsContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_for_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_statement" ):
                listener.enterFor_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_statement" ):
                listener.exitFor_statement(self)




    def for_statement(self):

        localctx = GrammarParser.For_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_for_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(GrammarParser.FOR)
            self.state = 59
            self.match(GrammarParser.T__0)
            self.state = 60
            self.match(GrammarParser.NUMBER)
            self.state = 61
            self.match(GrammarParser.T__1)
            self.state = 62
            self.match(GrammarParser.T__2)
            self.state = 63
            self.statements()
            self.state = 64
            self.match(GrammarParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Print_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(GrammarParser.PRINT, 0)

        def SOME_STRING(self):
            return self.getToken(GrammarParser.SOME_STRING, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_print_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint_statement" ):
                listener.enterPrint_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint_statement" ):
                listener.exitPrint_statement(self)




    def print_statement(self):

        localctx = GrammarParser.Print_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_print_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(GrammarParser.PRINT)
            self.state = 67
            self.match(GrammarParser.T__0)
            self.state = 68
            self.match(GrammarParser.SOME_STRING)
            self.state = 69
            self.match(GrammarParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Bracket_condContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bracket_cond(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.Bracket_condContext)
            else:
                return self.getTypedRuleContext(GrammarParser.Bracket_condContext,i)


        def NEGATION(self):
            return self.getToken(GrammarParser.NEGATION, 0)

        def cond_help(self):
            return self.getTypedRuleContext(GrammarParser.Cond_helpContext,0)


        def OR(self):
            return self.getToken(GrammarParser.OR, 0)

        def AND(self):
            return self.getToken(GrammarParser.AND, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_bracket_cond

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBracket_cond" ):
                listener.enterBracket_cond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBracket_cond" ):
                listener.exitBracket_cond(self)



    def bracket_cond(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = GrammarParser.Bracket_condContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_bracket_cond, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 72
                self.match(GrammarParser.T__4)
                self.state = 73
                self.bracket_cond(0)
                self.state = 74
                self.match(GrammarParser.T__5)
                pass

            elif la_ == 2:
                self.state = 76
                self.match(GrammarParser.NEGATION)
                self.state = 77
                self.match(GrammarParser.T__4)
                self.state = 78
                self.bracket_cond(0)
                self.state = 79
                self.match(GrammarParser.T__5)
                pass

            elif la_ == 3:
                self.state = 81
                self.cond_help(0)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 92
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 90
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = GrammarParser.Bracket_condContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_bracket_cond)
                        self.state = 84
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 85
                        self.match(GrammarParser.OR)
                        self.state = 86
                        self.bracket_cond(4)
                        pass

                    elif la_ == 2:
                        localctx = GrammarParser.Bracket_condContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_bracket_cond)
                        self.state = 87
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 88
                        self.match(GrammarParser.AND)
                        self.state = 89
                        self.bracket_cond(3)
                        pass

             
                self.state = 94
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Cond_helpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEGATION(self):
            return self.getToken(GrammarParser.NEGATION, 0)

        def condition(self):
            return self.getTypedRuleContext(GrammarParser.ConditionContext,0)


        def cond_help(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.Cond_helpContext)
            else:
                return self.getTypedRuleContext(GrammarParser.Cond_helpContext,i)


        def OR(self):
            return self.getToken(GrammarParser.OR, 0)

        def AND(self):
            return self.getToken(GrammarParser.AND, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_cond_help

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCond_help" ):
                listener.enterCond_help(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCond_help" ):
                listener.exitCond_help(self)



    def cond_help(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = GrammarParser.Cond_helpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_cond_help, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GrammarParser.NEGATION]:
                self.state = 96
                self.match(GrammarParser.NEGATION)
                self.state = 97
                self.condition()
                pass
            elif token in [GrammarParser.WALL, GrammarParser.ENEMY, GrammarParser.TREASURE, GrammarParser.TRAP, GrammarParser.TRUE, GrammarParser.FALSE]:
                self.state = 98
                self.condition()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 109
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 107
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = GrammarParser.Cond_helpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_cond_help)
                        self.state = 101
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 102
                        self.match(GrammarParser.OR)
                        self.state = 103
                        self.cond_help(3)
                        pass

                    elif la_ == 2:
                        localctx = GrammarParser.Cond_helpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_cond_help)
                        self.state = 104
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 105
                        self.match(GrammarParser.AND)
                        self.state = 106
                        self.cond_help(2)
                        pass

             
                self.state = 111
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ConditionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WALL(self):
            return self.getToken(GrammarParser.WALL, 0)

        def ENEMY(self):
            return self.getToken(GrammarParser.ENEMY, 0)

        def TRAP(self):
            return self.getToken(GrammarParser.TRAP, 0)

        def TREASURE(self):
            return self.getToken(GrammarParser.TREASURE, 0)

        def TRUE(self):
            return self.getToken(GrammarParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(GrammarParser.FALSE, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)




    def condition(self):

        localctx = GrammarParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GrammarParser.WALL) | (1 << GrammarParser.ENEMY) | (1 << GrammarParser.TREASURE) | (1 << GrammarParser.TRAP) | (1 << GrammarParser.TRUE) | (1 << GrammarParser.FALSE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ActionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FORWARD(self):
            return self.getToken(GrammarParser.FORWARD, 0)

        def TURN(self):
            return self.getToken(GrammarParser.TURN, 0)

        def direction(self):
            return self.getTypedRuleContext(GrammarParser.DirectionContext,0)


        def ATTACK(self):
            return self.getToken(GrammarParser.ATTACK, 0)

        def DISARM(self):
            return self.getToken(GrammarParser.DISARM, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_action

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAction" ):
                listener.enterAction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAction" ):
                listener.exitAction(self)




    def action(self):

        localctx = GrammarParser.ActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_action)
        try:
            self.state = 119
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GrammarParser.FORWARD]:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.match(GrammarParser.FORWARD)
                pass
            elif token in [GrammarParser.TURN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.match(GrammarParser.TURN)
                self.state = 116
                self.direction()
                pass
            elif token in [GrammarParser.ATTACK]:
                self.enterOuterAlt(localctx, 3)
                self.state = 117
                self.match(GrammarParser.ATTACK)
                pass
            elif token in [GrammarParser.DISARM]:
                self.enterOuterAlt(localctx, 4)
                self.state = 118
                self.match(GrammarParser.DISARM)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DirectionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT(self):
            return self.getToken(GrammarParser.LEFT, 0)

        def RIGHT(self):
            return self.getToken(GrammarParser.RIGHT, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_direction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDirection" ):
                listener.enterDirection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDirection" ):
                listener.exitDirection(self)




    def direction(self):

        localctx = GrammarParser.DirectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_direction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            _la = self._input.LA(1)
            if not(_la==GrammarParser.LEFT or _la==GrammarParser.RIGHT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUN(self):
            return self.getToken(GrammarParser.FUN, 0)

        def NAME(self):
            return self.getToken(GrammarParser.NAME, 0)

        def statements(self):
            return self.getTypedRuleContext(GrammarParser.StatementsContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)




    def function(self):

        localctx = GrammarParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(GrammarParser.FUN)
            self.state = 124
            self.match(GrammarParser.NAME)
            self.state = 125
            self.match(GrammarParser.T__2)
            self.state = 126
            self.statements()
            self.state = 127
            self.match(GrammarParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[7] = self.bracket_cond_sempred
        self._predicates[8] = self.cond_help_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def bracket_cond_sempred(self, localctx:Bracket_condContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 3)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 2)
         

    def cond_help_sempred(self, localctx:Cond_helpContext, predIndex:int):
            if predIndex == 2:
                return self.precpred(self._ctx, 2)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 1)
         




